[gd_scene load_steps=27 format=2]

[ext_resource path="res://asset/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://asset/UI/choice.png" type="Texture" id=2]
[ext_resource path="res://asset/character/mainPlayer/female/uniform/female_delighted.png" type="Texture" id=3]
[ext_resource path="res://asset/UI/board button.png" type="Texture" id=4]
[ext_resource path="res://asset/background/main menu/school_front_morning.png" type="Texture" id=5]
[ext_resource path="res://asset/character/mainPlayer/male/uniform/male_smile3.png" type="Texture" id=6]
[ext_resource path="res://asset/UI/choice3.png" type="Texture" id=7]
[ext_resource path="res://asset/fonts/Poppins-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://asset/UI/choicered.png" type="Texture" id=9]
[ext_resource path="res://asset/UI/nameLabel.png" type="Texture" id=10]
[ext_resource path="res://asset/UI/check ijo.png" type="Texture" id=11]
[ext_resource path="res://asset/UI/checklist ijo pressed.png" type="Texture" id=12]
[ext_resource path="res://scene/summary/summary.gd" type="Script" id=13]
[ext_resource path="res://asset/UI/x red pressed.png" type="Texture" id=14]
[ext_resource path="res://scene/oftenUsedScn/optionButton.gd" type="Script" id=15]
[ext_resource path="res://asset/UI/board.png" type="Texture" id=16]
[ext_resource path="res://asset/UI/x red.png" type="Texture" id=17]
[ext_resource path="res://asset/UI/exit.png" type="Texture" id=18]
[ext_resource path="res://asset/UI/exitPressed.png" type="Texture" id=19]
[ext_resource path="res://asset/character/mainPlayer/male/uniform/male_sad.png" type="Texture" id=20]
[ext_resource path="res://asset/character/mainPlayer/female/uniform/female_sad.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 103
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 241, 105 )
margin_top = 9.0

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 19
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 13 )

[node name="SchoolFrontMorning" type="Sprite" parent="."]
position = Vector2( 660, 361 )
scale = Vector2( 0.692593, 0.692593 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="summary board" type="Sprite" parent="."]
position = Vector2( 696, 48 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="summary board"]
margin_left = -56.0
margin_top = -20.0
margin_right = 66.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "SUMMARY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chara" type="Node2D" parent="."]
position = Vector2( 458, 430 )
scale = Vector2( 0.4538, 0.4538 )

[node name="female" type="Sprite" parent="chara"]
visible = false
position = Vector2( 0, 26.4435 )
scale = Vector2( 1.09799, 1.09799 )
texture = ExtResource( 3 )

[node name="FemaleSad" type="Sprite" parent="chara"]
visible = false
position = Vector2( 0.00012207, -0.000183105 )
scale = Vector2( 1.14595, 1.14595 )
texture = ExtResource( 21 )

[node name="MaleSad" type="Sprite" parent="chara"]
visible = false
position = Vector2( -72.1685, -88.9996 )
scale = Vector2( 1.11608, 1.11608 )
texture = ExtResource( 20 )

[node name="male" type="Sprite" parent="chara"]
visible = false
position = Vector2( -72.7193, -79.3301 )
scale = Vector2( 1.11465, 1.11465 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="chara"]
margin_left = -997.297
margin_top = 321.553
margin_right = -447.297
margin_bottom = 502.553
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Sprite" parent="chara/Label"]
visible = false
position = Vector2( 266.555, 92.5376 )
scale = Vector2( 2.49668, 2.10398 )
texture = ExtResource( 10 )

[node name="score1" type="Node2D" parent="."]
position = Vector2( -51, 28 )
__meta__ = {
"_edit_group_": true
}

[node name="Choice3" type="Sprite" parent="score1"]
position = Vector2( 810.75, 171 )
scale = Vector2( 0.939834, 1 )
texture = ExtResource( 7 )

[node name="red" type="Sprite" parent="score1"]
visible = false
position = Vector2( 909.25, 217 )
scale = Vector2( 1.75726, 1 )
texture = ExtResource( 9 )

[node name="green" type="Sprite" parent="score1"]
position = Vector2( 909, 219 )
scale = Vector2( 1.76141, 1.02381 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="score1"]
margin_left = 731.0
margin_top = 124.0
margin_right = 896.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "Helping mom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="score1"]
margin_left = 731.0
margin_top = 182.0
margin_right = 871.0
margin_bottom = 253.0
custom_fonts/font = SubResource( 2 )
text = "score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score2" type="Node2D" parent="."]
position = Vector2( -51, 116 )
__meta__ = {
"_edit_group_": true
}

[node name="Choice4" type="Sprite" parent="score2"]
position = Vector2( 904.25, 261 )
scale = Vector2( 1.68257, 1 )
texture = ExtResource( 7 )

[node name="red" type="Sprite" parent="score2"]
visible = false
position = Vector2( 915.25, 308.75 )
scale = Vector2( 1.75726, 1 )
texture = ExtResource( 9 )

[node name="green" type="Sprite" parent="score2"]
position = Vector2( 914.25, 308.75 )
scale = Vector2( 1.76141, 1.02381 )
texture = ExtResource( 2 )

[node name="Label3" type="Label" parent="score2"]
margin_left = 731.0
margin_top = 220.0
margin_right = 1107.0
margin_bottom = 255.0
custom_fonts/font = SubResource( 1 )
text = "Counting the groceries's price"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="score2"]
margin_left = 731.0
margin_top = 270.0
margin_right = 871.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 2 )
text = "score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score3" type="Node2D" parent="."]
position = Vector2( -51, 75 )
__meta__ = {
"_edit_group_": true
}

[node name="Choice5" type="Sprite" parent="score3"]
position = Vector2( 822, 482 )
texture = ExtResource( 7 )

[node name="red" type="Sprite" parent="score3"]
visible = false
position = Vector2( 910.25, 533.75 )
scale = Vector2( 1.75726, 1 )
texture = ExtResource( 9 )

[node name="green" type="Sprite" parent="score3"]
position = Vector2( 910.25, 531.75 )
scale = Vector2( 1.76141, 1.02381 )
texture = ExtResource( 2 )

[node name="Label2" type="Label" parent="score3"]
margin_left = 731.0
margin_top = 443.0
margin_right = 897.0
margin_bottom = 478.0
custom_fonts/font = SubResource( 1 )
text = "Sorting trash"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="score3"]
margin_left = 731.0
margin_top = 494.0
margin_right = 871.0
margin_bottom = 565.0
custom_fonts/font = SubResource( 2 )
text = "score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionButton" type="CanvasLayer" parent="."]
layer = 11
script = ExtResource( 15 )

[node name="Node2D" type="Node2D" parent="optionButton"]
visible = false

[node name="ColorRect" type="ColorRect" parent="optionButton/Node2D"]
margin_right = 1280.0
margin_bottom = 744.0
color = Color( 0.160784, 0.160784, 0.160784, 0.65098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" type="Sprite" parent="optionButton/Node2D"]
position = Vector2( 640, 369 )
scale = Vector2( 1.21429, 1.21429 )
texture = ExtResource( 16 )

[node name="TextureButton2" type="TextureButton" parent="optionButton/Node2D"]
margin_left = 656.0
margin_top = 416.0
margin_right = 736.0
margin_bottom = 492.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="optionButton/Node2D"]
margin_left = 536.0
margin_top = 416.0
margin_right = 616.0
margin_bottom = 492.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="optionButton/Node2D"]
margin_left = 504.0
margin_top = 296.0
margin_right = 776.0
margin_bottom = 353.0
custom_fonts/font = SubResource( 4 )
text = "DO YOU WANNA GO BACK 
TO MAIN MENU?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="optionButton"]
margin_left = 1144.0
margin_top = 48.0
margin_right = 1220.0
margin_bottom = 124.0
toggle_mode = true
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="optionButton/Node2D/TextureButton2" to="optionButton" method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="optionButton/Node2D/TextureButton3" to="optionButton" method="_on_TextureButton3_pressed"]
[connection signal="toggled" from="optionButton/TextureButton" to="optionButton" method="_on_TextureButton_toggled"]
